@@ -107,6 +107,15 @@ def RunCommand(win, command, redirect=True, hide=False, input_decorator=None,
         wx.Execute(command, wx.EXEC_ASYNC)
 Mixin.setMixin('mainframe', 'RunCommand', RunCommand)
 
+def StopCommand(win):
+    if win.messagewindow.process:
+        wx.Process_Kill(win.messagewindow.pid, wx.SIGKILL)
+        win.messagewindow.SetReadOnly(1)
+        win.messagewindow.pid = -1
+        win.messagewindow.process = None
+Mixin.setMixin('mainframe', 'StopCommand', StopCommand)
+
+
 def OnIdle(win, event):
     if win.process is not None:
         if win.inputstream:
